@@ -1,7 +1,11 @@
+2015-11-05  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Use standard MAX_DBL and MAX_INT macros as a source for MAXDOUBLE and MAXINT, to suppress GCC5 warnings.
+
 2015-11-04  Holger Schulz  <holger.schulz@durham.ac.uk>
 
 	* Adding LHCB inelastic xsection measurement (LHCB_2015_I1333223)
-	
+
 	* Adding ATLAS colour flow in ttbar->semileptonic measurement (ATLAS_2015_I1376945)
 
 2015-10-07  Chris Pollard  <cpollard@cern.ch>
